--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Superfun QR Code Generator</title>
+  <title>Superfun QR Generator - A not-awful QR code generator</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+  <meta name="description" content="A fun and not-awful QR code generator.  No signup required." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://qr.superfun.games/" />
+  <meta property="og:title" content="Superfun QR Generator" />
+  <meta property="og:description" content="A fun and not-awful QR code generator.  No signup required." />
+  <meta property="og:image" content="https://qr.superfun.games/social.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://qr.superfun.games/" />
+  <meta name="twitter:title" content="Superfun QR Generator" />
+  <meta name="twitter:description" content="A fun and not-awful QR code generator.  No signup required." />
+  <meta name="twitter:image" content="https://qr.superfun.games/social.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
